--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
       <!-- Slideshow container -->
       <div class="slideshow">
         <!-- Slideshow images -->
-        <!--img class="slide-img" src="./images/slide show/IMG_0317.jpg"-->
-        <!--img class="slide-img" src="./images/slide show/Fast Forward.jpg"-->
-        <img class="slide-img" src="./images/slide show/Plunge 2.jpg" alt="Plunge">
-        <img class="slide-img" src="./images/slide show/Tapestry 40_x30_, oil and spray paint, 2021.jpg" alt="Tapestry 40_x30_, oil and spray paint, 2021">
-        <img class="slide-img" src="./images/slide show/IMG_1925.jpg" alt="Painting">
-        <img class="slide-img" src="./images/slide show/Sunset Route, 48_x48_,  acrylic and mixed media, 2019.jpg" alt="Sunset Route, 48 x 48 in, acrylic and mixed media, 2019">
-        <img class="slide-img wide" src="./images/slide show/Movement, 36_x72_ diptych, acrylic, 2018.jpg" alt="Movement, 36 x 72 in diptych, acrylic, 2018">
-        <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg" alt="Stencil, 30 x 30 in, oil on canvas, 2018">
-        <img class="slide-img" src="./images/slide show/Borders.jpg" alt="Borders, 36 x 36 in, acrylic & mixed media, 2018">
-        <img class="slide-img" src="./images/slide show/IMG_9362.jpg" alt="Beach, 40 x 32 in, oil on canvas, 2018">
-        <img class="slide-img" src="./images/slide show/IMG_9452.jpg" alt="Birthday Wish, 50 x 33 in, acrylic & mixed media, 2018">
-        <img class="slide-img" src="./images/slide show/Notation.jpg" alt="Notation, 30 x 22 in, acrylic & mixed media, 2015">
-        <img class="slide-img" src="./images/slide show/Roma.jpg" alt="Roma">
-        <img class="slide-img" src="./images/slide show/Beach, 30_x22_, acrylic and mixed media, 2018.jpg" alt="Beach, 30 x 22 in, acrylic and mixed media, 2018">
-        <!--img class="slide-img" src="./images/slide show/Skeletal Structure.jpg"-->
+        <img class="slide-img" src="./images/slide show/GW1. Plunge 60x48 inches_ oil_2020.jpg" title="Plunge, 60 x 48 in, oil, 2020" alt="Plunge">
+        <img class="slide-img" src="./images/slide show/GW2. Flourish 50_x38_ acrylic and mixed media on paper 2020.jpg" title="Flourish, 50 x 38 in, acrylic and mixed media on paper, 2020" alt="Flourish">
+        <img class="slide-img" src="./images/slide show/GW3. Drift 40_x30 inches_, oil and spray paint, 2021.jpg" title="Drift, 40 x 30 in, oil and spray paint, 2021" alt="Drift">
+        <img class="slide-img" src="./images/slide show/GW4. Borders 40x36 inches acrylic and spray paint_2020.jpg" title="Borders, 40 x 36 in, acrylic and spray paint, 2020" alt="Borders">
+        <img class="slide-img" src="./images/slide show/GW5. Aqua, 60_x48_.jpg" title="Aqua, 60 x 48 in" alt="Aqua">
+        <img class="slide-img wide" src="./images/slide show/GW6. Flash 38_x50_ acrylic and mixed media on paper 2021.jpg" title="Flash, 38 x 50 in, acrylic and mixed media on paper, 2021" alt="Flash">
+        <img class="slide-img" src="./images/slide show/GW7. Child's Horse, 60x48 inches.jpg" title="Child's Horse, 60 x 48 in" alt="Child's Horse">
+        <img class="slide-img" src="./images/slide show/GW8. Notation 30x22 inches acrylic on paper 2015.jpg" title="Notation, 30 x 22 in, acrylic on paper, 2015" alt="Notation">
+        <img class="slide-img wide" src="./images/slide show/GW9. West_48x60_acrylic_mixed_media_2020.jpg" title="West, 48 x 60 in, acrylic and mixed media, 2020" alt="West">
+        <img class="slide-img wide" src="./images/slide show/GW10. Sway 48x60 inches oil and spray paint 2021.jpg" title="Sway, 48 x 60 in, oil and spray paint, 2021" alt="Sway">
+        <img class="slide-img" src="./images/slide show/GW11. Duet 48x48 inches oil 2014.jpg" title="Duet, 48 x 48 in, oil, 2014" alt="Duet">
+        <img class="slide-img" src="./images/slide show/GW12. Residue 14x11 inches acrylic on paper 2021.jpg" title="Residue, 14 x 11 in, acrylic on paper, 2021" alt="Residue">
+        <img class="slide-img" src="./images/slide show/GW13. Imprint 60x48 inches_oil_2019.jpg" title="Imprint 60 x 48 inches, oil, 2019" alt="Imprint">
+        <img class="slide-img" src="./images/slide show/GW14. Elevate 50x38 inches acrylic on paper 2020.jpg" title="Elevate, 50 x 38 in, acrylic on paper, 2020" alt="Elevate">
+        <img class="slide-img" src="./images/slide show/GW15. Figure_60_x48_ oil and spray paint, 2021.jpg" title="Figure, 60 x 48 in, oil and spray paint, 2021" alt="Figure">
       </div>
     </div>
     <!-- Call the slideshow script -->
