--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img class="slide-img" src="./images/slide show/GW1. Plunge 60x48 inches_ oil_2020.jpg" title="Plunge, 60 x 48 in, oil, 2020" alt="Plunge">
         <img class="slide-img" src="./images/slide show/GW2. Flourish 50_x38_ acrylic and mixed media on paper 2020.jpg" title="Flourish, 50 x 38 in, acrylic and mixed media on paper, 2020" alt="Flourish">
         <img class="slide-img" src="./images/slide show/GW3. Drift 40_x30 inches_, oil and spray paint, 2021.jpg" title="Drift, 40 x 30 in, oil and spray paint, 2021" alt="Drift">
-        <img class="slide-img" src="./images/slide show/GW4. Borders 40x36 inches acrylic and spray paint_2020.jpg" title="Borders, 40 x 36 in, acrylic and spray paint, 2020" alt="Borders">
+        <!--img class="slide-img" src="./images/slide show/GW4. Borders 40x36 inches acrylic and spray paint_2020.jpg" title="Borders, 40 x 36 in, acrylic and spray paint, 2020" alt="Borders"-->
         <img class="slide-img" src="./images/slide show/GW5. Aqua, 60_x48_.jpg" title="Aqua, 60 x 48 in" alt="Aqua">
         <img class="slide-img wide" src="./images/slide show/GW6. Flash 38_x50_ acrylic and mixed media on paper 2021.jpg" title="Flash, 38 x 50 in, acrylic and mixed media on paper, 2021" alt="Flash">
         <img class="slide-img" src="./images/slide show/GW7. Child's Horse, 60x48 inches.jpg" title="Child's Horse, 60 x 48 in" alt="Child's Horse">
@@ -56,7 +56,7 @@
         <img class="slide-img wide" src="./images/slide show/GW10. Sway 48x60 inches oil and spray paint 2021.jpg" title="Sway, 48 x 60 in, oil and spray paint, 2021" alt="Sway">
         <img class="slide-img" src="./images/slide show/GW11. Duet 48x48 inches oil 2014.jpg" title="Duet, 48 x 48 in, oil, 2014" alt="Duet">
         <img class="slide-img" src="./images/slide show/GW12. Residue 14x11 inches acrylic on paper 2021.jpg" title="Residue, 14 x 11 in, acrylic on paper, 2021" alt="Residue">
-        <img class="slide-img" src="./images/slide show/GW13. Imprint 60x48 inches_oil_2019.jpg" title="Imprint 60 x 48 inches, oil, 2019" alt="Imprint">
+        <!--img class="slide-img" src="./images/slide show/GW13. Imprint 60x48 inches_oil_2019.jpg" title="Imprint 60 x 48 inches, oil, 2019" alt="Imprint"-->
         <img class="slide-img" src="./images/slide show/GW14. Elevate 50x38 inches acrylic on paper 2020.jpg" title="Elevate, 50 x 38 in, acrylic on paper, 2020" alt="Elevate">
         <img class="slide-img" src="./images/slide show/GW15. Figure_60_x48_ oil and spray paint, 2021.jpg" title="Figure, 60 x 48 in, oil and spray paint, 2021" alt="Figure">
       </div>
