--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img class="slide-img" src="./images/slide show/GW7. Child's Horse, 60x48 inches.jpg" title="Child's Horse, 60 x 48 in" alt="Child's Horse">
         <img class="slide-img wide" src="./images/slide show/GW9. West_48x60_acrylic_mixed_media_2020.jpg" title="West, 48 x 60 in, acrylic and mixed media, 2020" alt="West">
         <img class="slide-img wide" src="./images/slide show/GW10. Sway 48x60 inches oil and spray paint 2021.jpg" title="Sway, 48 x 60 in, oil and spray paint, 2021" alt="Sway">
-        <img class="slide-img" src="./images/slide show/GW14. Elevate 50x38 inches acrylic on paper 2020.jpg" title="Elevate, 50 x 38 in, acrylic on paper, 2020" alt="Elevate">
+        <img class="slide-img wide" src="./images/slide show/GW14. Elevate 50x38 inches acrylic on paper 2020.jpg" title="Elevate, 50 x 38 in, acrylic on paper, 2020" alt="Elevate">
         <img class="slide-img" src="./images/slide show/GW15. Figure_60_x48_ oil and spray paint, 2021.jpg" title="Figure, 60 x 48 in, oil and spray paint, 2021" alt="Figure">
       </div>
     </div>
