--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <p>gswerfel@ucdavis.edu</p><br>
         <h3>Prince Street Gallery</h3>
         <p><a href="https://princestreetgallery.com/artist-page/gina-werfel/" target="_blank" rel="nofollow">https://princestreetgallery.com/artist-page/gina-werfel/</a><br>
-        530 West 25th Street 4th Floor<br>
+        547 West 27th St, Suite 504<br>
         New York, NY 10001<br>
         (646)230-0246</p>
         <h3>IdeelArt</h3>
