--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
         <img class="about-img" src="./images/IMG_2816 (1).jpg">
 
-        <h2>Contact</h2>
+        <h3>To Purchase or for Inquiries</h3>
         <h3>Gina Werfel</h3>
         <p>gswerfel@ucdavis.edu</p><br>
         <h3>Prince Street Gallery</h3>
