--- a/public-art.html
+++ b/public-art.html
@@ -31,7 +31,7 @@
           <a href="./exhibitions.html">Exhibitions</a>
       	  <a href="./public-art.html" class="active">Special Projects</a>
       	  <a href="./archive.php">Archive</a>
-      	  <a href="./news.html"><b>new! </b>Press</a>
+      	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
